main.css
/* Document */
* {
    color: rgb(121, 121, 121);
}

.lg-container {
    max-width: 940px;
    padding-left: 12px;
    padding-right: 12px;
}

.md-container {
    max-width: 420px;
}

.sm-spacing {
    padding: 1.25rem 0;
}

.md-spacing {
    padding: 1.75rem 0 ;
}

.lg-spacing-top {
	padding: 2rem 0 0 0;
}

/* Typography */
.is-size-xl {
	font-size: 2rem;
}

.takeaways{	
}

.iphone-takeaways {
	padding-top: 20rem;
}

/* Bulma Overwrites */
.columns {
    margin: 0;
}

.button {
    border-width: 0;
    margin-top: 25px;
    width: 200px;
}

.container {
    width: 100%;
}

.hero-body, h3 {
    padding: 0;
}

.navbar-menu {
    padding: 1rem 0;
    flex-grow: 0;
}

.navbar-end > a {
    padding: 0 1rem;
}

#project .hero.is-fullheight .hero-body {
    align-items: unset;
}

/* temp - clean this up after */

iframe {

	height: 100%;
	width: 100%;
}

img {
    max-width: 100%;
    height: auto;
}

.full-width {
	left: 50%;
	margin-left: -50vw;
	margin-right: -50vw;
	max-width: 100vw;
	position: relative;
	right: 50%;
	width: 100vw;
}

.landing {
    max-height: 550px;
    width: 100%;
}

.column.has-vertically-aligned-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.column.right-case-study, .column.left-case-study {
    height: 75vh;
}

.column.left-case-study.is-content, .column.right-case-study.is-content {
    padding: .75rem 4.5rem;
}

.right-case-study {
    align-items: flex-end;
}

.column.left-case-study {
    background-color: #CDEEE2;
}

.column.right-case-study {
    background-color: #6ab89b

;
}

#second .column.right-case-study {
    background-color: #eaf2f8;
}

#second .column.left-case-study {
    background-color: #5a97c4;
}

#third .column.left-case-study {
    background-color: #EFA2CC;
}

#third .column.right-case-study {
    background-color: #D14D95;
}

#fourth .column.left-case-study {
    background-color: #636e72;
}

#fourth .column.right-case-study {
    background-color: #e6ebed;
}

.columns:last-child {
    margin-bottom: 0;
}

.row {
    height: 100%;
}

/* Links */

.navbar-end > a > h2:hover {
    color: #303133;
}


svg>path:hover {
	color: #000; /* fix this to the actual link box */
}

/* "Fun" Image Grid */
.fun_row {
  display: -ms-flexbox; /* IE10 */
  display: flex;
  -ms-flex-wrap: wrap; /* IE10 */
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create four equal columns that sits next to each other */
.fun_column {
  -ms-flex: 25%; /* IE10 */
  flex: 25%;
  max-width: 25%;
  padding: 0 4px;
}

.fun_column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}

/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 800px) {
  .column {
    -ms-flex: 50%;
    flex: 50%;
    max-width: 50%;
  }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .column {
    -ms-flex: 100%;
    flex: 100%;
    max-width: 100%;
  }
}

/* Animations */

.item-1, 
.item-2, 
.item-3,
.item-4 {
    position: absolute;
	animation-duration: 20s;
	animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
}

.item-1{
	animation-name: anim-1;
}

.item-2{
	animation-name: anim-2;
}

.item-3{
	animation-name: anim-3;
}

.item-4 {
    animation-name: anim-4;
}

@keyframes anim-1 {
	0%, 5% {opacity: 0; }
    15%,25% {opacity: 1; }
    25%, 100% {opacity: 0; }
}

@keyframes anim-2 {
	0%, 25% {opacity: 0; }
    35%, 45% {opacity: 1; }
    50%, 100% {opacity: 0; }
}

@keyframes anim-3 {
	0%, 50% {opacity: 0; }
    60%, 70% {opacity: 1; }
    75%, 100% {opacity: 0; }
}

@keyframes anim-4 {
	0%, 75% {opacity: 0; }
    85%, 95% {opacity: 1; }
    100% {opacity: 0; }
}

@media screen and (max-width: 1023px) {
    .navbar-menu.is-active {
        text-align: center;
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        z-index: 100;
        width: 250px;
    }
    .container {
        overflow-x: hidden;
    }    
}

